# dealers-choice

./: .cirrus.yml  .gitignore  .mesonferc  BUILD.md  CLAUDE.md  ChangeLog  LICENSE  README.md  ReleaseNotes  meson.build  meson_options.txt  vcpkg.json
.claude/commands/: dc-gate.md  dc-soak.md  dc-verify.md
.claude/hooks/: gcc-gate.sh
.github/scripts/: install_ubuntu_deps.sh
.github/workflows/: alpine.yml  anylinux-appimage.yml  appimage-build-image.yml  appimage.yml  bsd.yml  codeql.yml  coverity.yml  deploy-docs.yml  docker-build-env.yml  docker.yml  ghcr-cleaner.yml  linux.yml  macos.yml  msvc.yml  msys2.yml  proto-check.yml  tumbleweed.yml  windows.yml
coverity/: miniaudio_model.c
data/: README.md  common.conf  layout.conf  server.conf
docker/: Dockerfile  Dockerfile-appimage  Dockerfile-build-env_arch  Dockerfile-build-env_tumbleweed  Dockerfile.alpine  README.md  docker-compose.hostnet.yml  docker-compose.yml  env.example
docs/: BOT.md  CONFIG.md  GAME_PLAY.md  REGISTRY.md  TRANSLATE.md  keys.md
icons/: dealers-choice.rc
locales/: dealers_choice.pot
locales/en_GB/: messages.po
locales/en_GB/LC_MESSAGES/: dealers_choice.po
packaging/: PKGBUILD  dealers-choice.desktop  release-process.txt
packaging/Slackbuild/dealers-choice/: README  dealers-choice.SlackBuild  dealers-choice.info
packaging/anylinux-appimage/: .gitignore  README.md  build-anylinux-appimage.sh
packaging/appimage/: .gitignore  AppRun  README.md  build-appimage.sh  docker-compose.yml
packaging/debian/: changelog  control  copyright  rules
packaging/icons/: README.md
packaging/systemd/: dealers-choice-server.service
packaging/windows/: collect-dlls.sh  dealers-choice.iss
po/: LINGUAS  POTFILES  de.po  dealers-choice.pot  es.po  es_CO.po  es_MX.po  fr.po  it.po  meson.build  nl.po  ru.po  se.po  sv.po  uk.po
scripts/: _harness_common.sh  analyze_hands.py  disconnect_test.sh  dist-strip-list.txt  dist-strip-packaging.sh  extract_project_links.py  flaky-loop.sh  install_ubuntu_deps.sh  netem.sh  run_bot_session.sh  soak.sh  test_analyze_hands.py  tmux-run-3-gui-clients.sh  tmux-run-bots.sh  tmux-run-gui-clients.sh
src/: bot.c  button.c  button.h  cli.c  cli.h  client.c  client.h  dc_config.c  dc_config.h  dc_endian.h  dc_identity.c  dc_identity.h  dc_protocol.proto  dc_registry.proto  dc_time.c  dc_time.h  dc_windows.h  debug.c  debug.h  game.c  game.h  getlongopt.h  gettext.h  globals.c  globals.h  graphics.c  graphics.h  hotkeys.c  indicator.c  indicator.h  lan_discovery.c  lan_discovery.h  layout.c  layout.h  layout_config.h  links.c  links.h  main.c  main.h  main.lua  (+17 more)
src/deckhandler/: deckhandler.c  deckhandler.h  meson.build
src/deckhandler/pcg/: meson.build
src/deckhandler/test/: meson.build  test_cut_strings.c  test_recycle.c  test_shuffle_deal.c
src/game/: game.c  game.h  meson.build
src/net/: lan_discovery.c  lan_discovery.h  meson.build  net.c  net.h  registry.c  registry.h  registry_ledger.c  registry_ledger.h
src/pokeval/: meson.build  pokeval.c  pokeval.h
src/pokeval/tests/: 00_test.c  00_test.h  6-card-hand.c  7-card-hand.c  bringin.c  compare_hands.c  five-of-a-kind.c  flush.c  four-of-a-kind.c  lowball.c  meson.build  no_peek_visible.c  nothing.c  omaha.c  pair.c  score_stud_upcards.c  sort_hand.c  straight.c  test.c  wild.c
src/protobuf/: dc_protocol.pb-c.c  dc_protocol.pb-c.h  dc_registry.pb-c.c  dc_registry.pb-c.h  netpoker.pb-c.c  netpoker.pb-c.h
src/registry/: registry_main.c
src/server/: games.c  meson.build  round.c  server.c  server.h  server_internal.h  server_main.c  variants.c
src/tcpme/: meson.build  tcpme.c  tcpme.h
src/tcpme/tests/: meson.build  tcpme_test_helpers.h  test_basic.c  test_error_paths.c  test_hostname.c  test_ipv6.c  test_loopback.c  test_peer_close.c  test_protocol.c  test_socket_set.c  test_timeout.c  test_udp.c
src/ui/: client.c  client.h  client_internal.h  game_logic.c  game_select.c  globals_gui.c  globals_gui.h  graphics.c  graphics.h  hotkey_overlay.c  hotkey_overlay.h  hotkey_table.c  hotkey_table.h  hotkeys.c  hotkeys.h  layout.h  links.c  links.h  menus.c  menus.h  meson.build  ping_probe.c  ping_probe.h  registry_fetch_thread.c  registry_fetch_thread.h  style.c  style.h  ui_widget.c  ui_widget.h
src/widgets/: button.c  button.h  card.c  card.h  card_text_atlas.c  card_text_atlas.h  checkbox.c  checkbox.h  dealer.c  dealer.h  diamond_button.c  diamond_button.h  image.c  image.h  indicator.c  indicator.h  input.c  input.h  link.c  link.h  meson.build  nick.c  nick.h  ping.c  ping.h  player.c  player.h  round_button.c  round_button.h  step_scale.c  step_scale.h  text.c  text.h
subprojects/: canfigger.wrap  deckhandler.wrap  lumen.wrap  miniaudio.wrap  pokeval.wrap  sdl3_net.wrap  tinygettext.wrap
subprojects/miniaudio/: meson.build
subprojects/pcg/: meson.build
tests/: 00_test.c  00_test.h  01_recv_game_state_3x.c  01_recv_game_state_4x.c  01_recv_game_state_5x.c  5_card_draw.c  5_card_showdown.c  5_card_showdown.sh  5_card_stud.c  5_card_stud.sh  5_card_triple_draw.c  README.md  _receive_game_state.c  _setup_socket_context.c  card_texture_cache.c  check.c  create_player_list.c  debug_print_cards.c  deuces_wild.c  fold.c  fuzz_util.h  game_logic.py  get_next_player.c  identity.c  identity_handshake.c  kick_ban.c  lan_discovery_test.c  lan_fuzz.c  layout_cards.c  meson.build  net_fuzz.c  no_peek.c  ping_probe_cooldown.c  ping_probe_flood.c  pokeval_fuzz.c  pokeval_fuzz_check.py  raises.c  rate_limit.c  registry.c  registry_fuzz.c  (+6 more)
tools/: README.md  gen_keys_doc.c  meson.build  registry_probe.c
web/: .env.example  .gitignore  Caddyfile  README.md  diag.html  docker-compose.yml  server-list.html
