option('gen_protobuf', type : 'boolean', value : false,
       description : 'Generate protobuf c source')

option('docdir', type : 'string', value : 'share/doc/dealers-choice',
       description : 'directory where the documentation should be installed to')

option('nls', type : 'boolean', value : true,
       description : 'include native language support (install translations)')

option('tools', type : 'boolean', value : false,
       description : 'build optional diagnostic CLIs in tools/ (not installed; off by default so release/package builds skip them)')

